ExtractFix_dataset/docker/ffmpeg/testcases/EF30/ubsan.txt
INFO: Seed: 3624618701
INFO: Loaded 1 modules   (118537 guards): 118537 [0xf7ac78, 0xfee89c), 
tools/target_dec_cavs_fuzzer: Running 1 inputs 1 time(s) each.
Running: /dataset/testcases/EF30/clusterfuzz-testcase-minimized-ffmpeg_AV_CODEC_ID_CAVS_fuzzer-5000441286885376
src/libavcodec/cavsdec.c:489:24: runtime error: signed integer overflow: 25984 * 130560 cannot be represented in type 'int'
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior src/libavcodec/cavsdec.c:489:24 in 
Executed /dataset/testcases/EF30/clusterfuzz-testcase-minimized-ffmpeg_AV_CODEC_ID_CAVS_fuzzer-5000441286885376 in 525 ms
***
*** NOTE: fuzzing was not performed, you have only
***       executed the target code on a fixed set of inputs.
***
